breaking(wm): switched to XMonadWM

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,211 +1,144 @@
-[colours]
-background = ${xrdb:color0:#222}
-foreground = ${xrdb:color7:#222}
-foreground-alt = ${xrdb:color7:#222}
-alert = ${xrdb:color3:#222}
-primary = ${xrdb:color4:#222}
-secondary = ${xrdb:color8:#222}
-
-[bar/yan]
-override-redirect = false
-
-bottom = false
-fixed-center = true
-width = 100%
-height = 29
-
-background = ${colours.background}
-foreground = ${colours.foreground}
-
-line-size = 1
-
-padding-right = 1 
-padding-left = 0
-
-module-margin = 0
-
-font-0 = "Iosevka Term:pixelsize=13;4"
-font-1 = "Iosevka Term:pixelsize=6;1"
-font-2 = "Cartograph CF:pixelsize=6"
-
-modules-left = sps left_arr i3 right_arr
-modules-center = left_arr title right_arr
-modules-right = left_arr_2 backlight sps battery sps pulseaudio sps date right_arr_2
-
-wm-name = i3
-wm-restack = i3
-
-dpi-x = 133
-dpi-y = 133
-
-enable-ipc = false
-
-[module/left_arr]
-type = custom/text
-content = "「"
-content-padding = 0
-
-[module/right_arr]
-type = custom/text
-content = "」"
-content-padding = 0
-
-[module/left_arr_2]
-type = custom/text
-content = "「"
-content-padding = 1
-
-[module/right_arr_2]
-type = custom/text
-content = "」"
-content-padding = 1
-
-[module/i3]
-type = internal/i3
-
-pin-workspaces = true
-strip-wsnumbers = true
-enable-scroll = true
-
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;
-ws-icon-7 = 8;
-ws-icon-8 = 9;
-ws-icon-9 = 10;
-ws-icon-default = 
-
- ; Available tags:
- ;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
- ;   <label-mode> (default)
- format = <label-state> <label-mode>
-
- ; Available tokens:
- ;   %mode%
- ; Default: %mode%
- label-mode = %mode%
- label-mode-padding = 1
- label-mode-background = #e60053
-
- ; Available tokens:
- ;   %name%
- ;   %icon%
- ;   %index%
- ;   %output%
- ; Default: %icon% %name%
- label-focused = %icon%
- ;label-focused-foreground = #ffffff
- label-focused-background = #3F3F3F
- label-focused-underline = ${colours.foreground}
- label-focused-padding = 1
-
- ; Available tokens:
- ;   %name%
- ;   %icon%
- ;   %index%
- ;   %output%
- ; Default: %icon% %name%
- label-unfocused = %icon%
- label-unfocused-padding = 1
-
- ; Available tokens:
- ;   %name%
- ;   %icon%
- ;   %index%
- ;   %output%
- ; Default: %icon% %name%
- label-visible = %icon%
- label-visible-underline = #555555
- label-visible-padding = 1
-
- ; Available tokens:
- ;   %name%
- ;   %icon%
- ;   %index%
- ;   %output%
- ; Default: %icon% %name%
- label-urgent = %icon%
- label-urgent-foreground = ${colours.alert}
- label-urgent-background = #bd2c40
- label-urgent-padding = 1
+;==========================================================
 ;
-; ; Separator in between workspaces
- label-separator = 
- label-separator-padding = 1
- label-separator-foreground = #ffb52a
+;
+;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
+;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
+;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
+;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
+;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
+;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
+;
+;
+;   To learn more about how to configure Polybar
+;   go to https://github.com/polybar/polybar
+;
+;   The README contains a lot of information
+;
+;==========================================================
 
-[module/date]
-type = internal/date
+[colors]
+;background = #24273a
+background = #00000000
+background-alt = #1e2030
+foreground = #cad3f5
+primary = #f5bde6
+secondary = #8aadf4
+alert = #eed49f
+disabled = #8087a2
 
-interval = 1.0
+[bar]
+width = 100%
+height = 18pt
+radius = 0
+background = ${colors.background}
+foreground = ${colors.foreground}
+line-size = 1pt
+border-size = 0pt
+border-color = #00000000
+padding-left = 0
+padding-right = 1
+module-margin = 1
+separator = |
+separator-foreground = ${colors.disabled}
+font-0 = "Source Code Pro:size=9;2"
+font-1 = "Source Code Pro:size=9:weight=bold;2"
+modules-left = xworkspaces
+modules-center = date
+modules-right = fs-root memory pulseaudio
+fixed-center = true
+cursor-click = pointer
+cursor-scroll = ns-resize
+enable-ipc = true
+wm-restack = generic
 
-date = %{T1}%{T-}%{T2} %a, %d %b %y%{T-}
-time = %{T2} %H:%M:%S%{T-}
+[bar/bar1]
+inherit = bar
+tray-position = right
 
-label = %date%%time%
-label-font = 0
+[bar/bar2]
+inherit = bar
 
-[module/sps]
-type = custom/text
-content = " "
-content-padding = 0
+[bar/bar3]
+inherit = bar
 
-[module/title]
-type = internal/xwindow
+[module/xworkspaces]
+type = internal/xworkspaces
 
-format = <label>
-format-foreground = ${colours.foreground}
-format-padding = 1
+label-active = %name%
+label-active-background = ${colors.background-alt}
+label-active-underline= ${colors.primary}
+label-active-padding = 1
 
-label = "%{T1}%{T-}%{T2} %title%%{T-}"
-label-maxlen = 65
+label-occupied = %name%
+label-occupied-padding = 1
 
-label-empty = "%{T2}usbo@dave%{T-}"
-label-empty-foreground = ${colours.foreground}
+label-urgent = %name%
+label-urgent-background = ${colors.alert}
+label-urgent-padding = 1
+
+label-empty = %name%
+label-empty-foreground = ${colors.disabled}
+label-empty-padding = 1
+
+[fs-base]
+type = internal/fs
+interval = 25
+
+mount-0 = /
+
+label-mounted = %{F#f5bde6}%mountpoint%%{F-} %percentage_used%%
+
+label-unmounted = %mountpoint% not mounted
+label-unmounted-foreground = ${colors.disabled}
+
+[module/fs-root]
+inherit = fs-base
+mount-0 = /
+label-mounted = %{F#f5bde6}ROOT%{F-} %percentage_used%%
+
+[module/fs-disk0]
+inherit = fs-base
+mount-0 = /run/media/usbo/Volume/
+label-mounted = %{F#f5bde6}DISK0%{F-} %percentage_used%%
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-use-ui-max = false
+format-volume-prefix = "VOL "
+format-volume-prefix-foreground = ${colors.primary}
+format-volume = <label-volume>
+
+label-volume = %percentage%%
+
+label-muted = muted
+label-muted-foreground = ${colors.disabled}
+
+[module/memory]
+type = internal/memory
+interval = 2
+format-prefix = "RAM "
+format-prefix-foreground = ${colors.primary}
+label = %percentage_used:2%%
+
+[module/cpu]
+type = internal/cpu
+interval = 2
+format-prefix = "CPU "
+format-prefix-foreground = ${colors.primary}
+label = %percentage:2%%
+
+[module/date]
+type = internal/date
 interval = 1
 
-format-volume = <label-volume>
-format-muted = <label-muted>
+date = %A, %b %d  %H:%M
+date-alt = %Y-%m-%d %H:%M:%S
 
-label-volume = %{T1}墳%{T-} %{T2}%percentage%%%{T-}
+label = %{T2}%date%%{T}
+label-foreground = ${colors.secondary}
 
-label-muted = %{T1}ﱝ%{T-} %{T2}shhh!%{T-}
-label-muted-foreground = ${colours.alert}
+[settings]
+screenchange-reload = true
+pseudo-transparency = true
 
-ramp-volume-0 = %{T1}%{T-}
-ramp-volume-1 = %{T1}奔%{T-}
-ramp-volume-2 = %{T1}墳%{T-}
-
-click-right = pavucontrol &
-
-[module/backlight]
-type = internal/backlight
-card = intel_backlight
-enable-scroll = true
-
-format = <label>
-label = %{T2} %percentage%%%{T-}
-
-[module/battery]
-type = internal/battery
-full-at = 99
-battery = BAT0
-adapter = ADP1
-poll-interval = 5
-
-format-charging = <label-charging>
-format-discharging = <label-discharging>
-
-label-charging = %{T2}%{T-} %{T2}%percentage%%%{T-}
-label-discharging = %{T1}%{T-} %{T2}%percentage%%%{T-}
-
-label-full = %{T1}%{T-} %{T2}Full!%{T-}
+; vim:ft=dosini
