--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,6 +1,7 @@
-##############################################################################
-#                                  SHADOWS                                   #
-##############################################################################
+
+#################################
+#             Shadows           #
+#################################
 
 
 # Enabled client-side shadows on windows. Note desktop windows 
@@ -11,16 +12,19 @@
 shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
-shadow-radius = 45 # 4
+# shadow-radius = 12
+shadow-radius = 0;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-shadow-opacity = .35 # .5
+shadow-opacity = 1;
 
 # The left offset for shadows, in pixels. (defaults to -15)
-shadow-offset-x = -33 # 5
+# shadow-offset-x = -15
+shadow-offset-x = 6;
 
 # The top offset for shadows, in pixels. (defaults to -15)
-shadow-offset-y = -28 # 5
+# shadow-offset-y = -15
+shadow-offset-y = 6;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
@@ -33,13 +37,13 @@ shadow-offset-y = -28 # 5
 # no-dnd-shadow = false
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
-# shadow-red = .18
+shadow-red = 0.094
 
 # Green color value of shadow (0.0 - 1.0, defaults to 0).
-# shadow-green = .19
+shadow-green = 0.098
 
 # Blue color value of shadow (0.0 - 1.0, defaults to 0).
-# shadow-blue = .20
+shadow-blue = 0.149
 
 # Do not paint shadows on shaped windows. Note shaped windows 
 # here means windows setting its shape through X Shape extension. 
@@ -60,12 +64,10 @@ shadow-offset-y = -28 # 5
 # shadow-exclude = []
 shadow-exclude = [
   "name = 'Notification'",
-  "name *= 'polybar'",
-  "class_g ?= 'i3-frame'",
-  "class_g ?= 'exodus'",
-  "class_g ?= 'lunarclient'",
+  "QTILE_INTERNAL:32c = 1",
+  "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
-  "class_g ?= 'rofi'",
+  "class_g = 'Cairo-clock'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -77,15 +79,18 @@ shadow-exclude = [
 # shadow-exclude-reg = "" 
 
 # Crop shadow of a window fully on a particular Xinerama screen to the screen.
-# xinerama-shadow-crop = false
+xinerama-shadow-crop = true
 
-##############################################################################
-#                                  FADING                                    #
-##############################################################################
+
+#################################
+#           Fading              #
+#################################
+
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
-fading = false
+# fading = false
+fading = true
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
@@ -107,20 +112,24 @@ fade-out-step = 0.03;
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
 # no-fading-destroyed-argb = false
 
-##############################################################################
-#                                   OPACITY                                  #
-##############################################################################
+
+#################################
+#   Transparency / Opacity      #
+#################################
+
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-inactive-opacity = 1.0
+# inactive-opacity = 1
+inactive-opacity = 1;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-frame-opacity = 1.0
+# frame-opacity = 1.0
+frame-opacity = 1.0;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
-menu-opacity = 1.0
+# menu-opacity = 1.0
 
-# Let inactive opacity set by -i override the '_NET_WM_OPACIT' values of windows.
+# Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 # inactive-opacity-override = true
 inactive-opacity-override = false;
 
@@ -146,12 +155,14 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #
 # opacity-rule = []
 
-##############################################################################
-#                                    BLUR                                    #
-##############################################################################
+
+#################################
+#     Background-Blurring       #
+#################################
+
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-blur-method = "gaussian"
+# blur-method = 
 # blur-size = 12
 #
 # blur-deviation = false
@@ -160,7 +171,7 @@ blur-method = "gaussian"
 # Bad in performance, with driver-dependent behavior. 
 # The name of the switch may change without prior notifications.
 #
-blur-background = true
+# blur-background = false
 
 # Blur background of windows when the window frame is not opaque. 
 # Implies:
@@ -190,9 +201,9 @@ blur-background-exclude = [
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
-##############################################################################
-#                                    GENERAL                                 #
-##############################################################################
+#################################
+#       General Settings        #
+#################################
 
 # Daemonize process. Fork to background after initialization. Causes issues with certain (badly-written) drivers.
 # daemon = false
@@ -201,7 +212,7 @@ blur-background-exclude = [
 # `xrender` is the default one.
 #
 # backend = 'glx'
-backend = "glx";
+backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
@@ -406,11 +417,6 @@ log-level = "warn";
 #
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
-  dropdown_menu = { shadow = false; };
-  popup_menu    = { shadow = false; };
-  utility       = { shadow = false; };
-
-}
+};
