--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -17,9 +17,9 @@ print_info() {
     info "Term" term
     info "Shell" shell
     # info "Terminal Font" term_font
-    prin "CPU" "Intel Core i5-8600K (4) @ 2.9GHz"
-    prin "GPU" "NVIDIA GeForce 2080 SUPER"
-    prin "Mem" "2.3G / 15.8G"
+    info "CPU" cpu
+    info "GPU" gpu
+    info "Mem" memory
 
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
